ignores file improved to filter all workspace.* artefacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /Makefile
 /bm.tags
-/bm.workspace.egr
-/bm.workspace.session
+/bm.workspace.*
+/bm.workspace.*
 /cppcheck.list
 /bmgcc/bmgcc.mk
 Debug/
