GNU parameters made conditional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 
 project(bmgcc)
 
-add_definitions( -DNO_WMAIN_SUPPORT )
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+ELSE()
+    add_definitions( -DNO_WMAIN_SUPPORT )
+ENDIF()
 
 include_directories(bmgcc)
 
@@ -10,8 +13,13 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-set(CMAKE_CXX_FLAGS_RELEASE  "-march=corei7-avx -Wall -Ofast -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm")
-set(CMAKE_CXX_FLAGS_DEBUG  "-march=corei7-avx -Wall -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm")
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+ELSE()
+    set(CMAKE_CXX_FLAGS_RELEASE  "-march=corei7-avx -Wall -Ofast -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm")
+    set(CMAKE_CXX_FLAGS_DEBUG  "-march=corei7-avx -Wall -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm")
+ENDIF()
+
+
 
 set(BMGCC bmgcc)
 file(GLOB BM_SOURCE_FILES "${BMGCC}/*.c")
