--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 ﻿cmake_minimum_required(VERSION 3.2)
 
-project(bmgcc)
+project(bm)
 
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 ELSE()
     add_definitions( -DNO_WMAIN_SUPPORT )
 ENDIF()
 
-include_directories(bmgcc)
+include_directories(bm)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
@@ -28,16 +28,16 @@ ELSE()
     set(CMAKE_CXX_FLAGS_DEBUG  "-march=corei7-avx -Wall -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm")
 ENDIF()
 
-set(BMGCC bmgcc)
-file(GLOB BM_SOURCE_FILES "${BMGCC}/*.c")
+set(BM bm)
+file(GLOB BM_SOURCE_FILES "${BM}/*.c")
 
 set(BMT bmt)
 set(BMT_SOURCE_FILES
     ${BMT}/bmt.cpp
     ${BMT}/search_test.cpp
     ${BMT}/gtest-all.cc
-    ${BMGCC}/bmsearch.c
-    ${BMGCC}/eprintf.c
+    ${BM}/bmsearch.c
+    ${BM}/eprintf.c
 )
 
 add_executable(bm ${BM_SOURCE_FILES})
