--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,8 @@ root = true
 [*]
 indent_style = space
 charset = utf-8
+end_of_line=crlf
+insert_final_newline=true
 # (Please don't specify an indent_size here; that has too many unintended consequences.)
 
 # Code files
