--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,17 @@
-﻿cmake_minimum_required(VERSION 3.2)
+﻿cmake_minimum_required(VERSION 3.21)
 
 project(bm)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+)
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 ELSE()
@@ -8,6 +19,8 @@ ELSE()
 ENDIF()
 
 include_directories(bm)
+
+include(GoogleTest)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
@@ -24,8 +37,8 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
         set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} /LTCG")
     endif()
 else()
-    set(CMAKE_CXX_FLAGS_RELEASE  "-march=corei7-avx -Wall -Ofast -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm -std=c++11")
-    set(CMAKE_CXX_FLAGS_DEBUG  "-march=corei7-avx -Wall -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm -std=c++11")
+    set(CMAKE_CXX_FLAGS_RELEASE  "-march=corei7-avx -Wall -Ofast -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm -std=c++14")
+    set(CMAKE_CXX_FLAGS_DEBUG  "-march=corei7-avx -Wall -mtune=corei7-avx -mfpmath=both -save-temps -fverbose-asm -std=c++14")
 endif()
 
 set(BM bm)
@@ -35,7 +48,6 @@ set(BMT bmt)
 set(BMT_SOURCE_FILES
     ${BMT}/bmt.cpp
     ${BMT}/search_test.cpp
-    ${BMT}/gtest-all.cc
     ${BM}/bmsearch.c
     ${BM}/eprintf.c
 )
@@ -45,5 +57,7 @@ add_executable(bmt ${BMT_SOURCE_FILES})
 
 if(UNIX)
 target_link_libraries(bm m)
-target_link_libraries(bmt m pthread)
+target_link_libraries(bmt m pthread GTest::gtest_main)
+else()
+target_link_libraries(bmt GTest::gtest_main)
 endif()
